# Oauth support added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.application.name=organization-service
 spring.main.allow-bean-definition-overriding=true
 
 user.service.url=http://localhost:8080/user/{orgnization}
+
+security.oauth2.resource.user-info-uri=http://localhost:8080/user/current
+security.oauth2.resource.token-info-uri=http://localhost:8080/oauth/check_token
+security.oauth2.client.clientId=org-service
+security.oauth2.client.clientSecret=1234
+security.oauth2.client.grant-type=client_credentials
+security.oauth2.client.scope=server
+security.oauth2.client.accessTokenUri=http://localhost:8080/oauth/token
